Fix light and dark modes

--- a/styles.scss
+++ b/styles.scss
@@ -14,7 +14,26 @@ If your plugin does not need CSS, delete this file.
   display: none;
 }
 
-@media (prefers-color-scheme: dark) {
+.theme-light {
+  --jexcel_header_color: #000;
+  --jexcel_header_color_highlighted: #000;
+  --jexcel_header_background: #f3f3f3;
+  --jexcel_header_background_highlighted: #dcdcdc;
+  --jexcel_content_color: #000;
+  --jexcel_content_color_highlighted: #000;
+  --jexcel_content_background: #fff;
+  --jexcel_content_background_highlighted: rgba(0,0,0,0.05);
+  --jexcel_menu_background: #fff;
+  --jexcel_menu_background_highlighted: #ebebeb;
+  --jexcel_menu_color: #555;
+  --jexcel_menu_color_highlighted: #555;
+  --jexcel_menu_box_shadow: 2px 2px 2px 0px rgba(143, 144, 145, 1);
+  --jexcel_border_color: #ccc;
+  --jexcel_border_color_highlighted: #000;
+  --active_color: #007aff;
+}
+
+.theme-dark {
   :root {
     --jexcel_header_color: #888;
     --jexcel_header_color_highlighted: #444;
@@ -32,5 +51,5 @@ If your plugin does not need CSS, delete this file.
     --jexcel_border_color: #5f5f5f;
     --jexcel_border_color_highlighted: #999;
     --active_color: #eee;
-}
+  }
 }
